workspace-sf/force-app/main/default/objects/CriticaContrato_Event__e/CriticaContrato_Event__e.object-meta.xml
<CustomObject>
    <label>CriticaContrato Event</label>
    <pluralLabel>CriticaContrato Events</pluralLabel>
</CustomObject>