workspace-sf/force-app/main/default/objects/CriticaContrato_Event__e/fields/DataConclusao__c.field-meta.xml
<CustomField>
    <fullName>DataConclusao__c</fullName>
    <label>DataConclusao</label>
    <type>Date</type>
</CustomField>