workspace-sf/force-app/main/default/objects/CriticaContrato_Event__e/fields/MensagemCliente__c.field-meta.xml
<CustomField>
    <fullName>MensagemCliente__c</fullName>
    <label>MensagemCliente</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>