workspace-sf/force-app/main/default/objects/CriticaContrato_Event__e/fields/MensagemInterna__c.field-meta.xml
<CustomField>
    <fullName>MensagemInterna__c</fullName>
    <label>MensagemInterna</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>