workspace-sf/force-app/main/default/objects/CriticaContrato_Event__e/fields/MensagemRepresentante__c.field-meta.xml
<CustomField>
    <fullName>MensagemRepresentante__c</fullName>
    <label>MensagemRepresentante</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>