workspace-sf/force-app/main/default/objects/CriticaContrato_Event__e/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <label>Origem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>