workspace-sf/force-app/main/default/objects/CriticaContrato_Event__e/fields/Procedimento__c.field-meta.xml
<CustomField>
    <fullName>Procedimento__c</fullName>
    <label>Procedimento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>