workspace-sf/force-app/main/default/objects/CriticaContrato_Event__e/fields/Severidade__c.field-meta.xml
<CustomField>
    <fullName>Severidade__c</fullName>
    <label>Severidade</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>